openshift/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-backend-service
spec:
  selector:
    app: demo-backend
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
